add panel classes

--- a/src/TilePanel/TilePanelDemo/TilePanelDemo.csproj
+++ b/src/TilePanel/TilePanelDemo/TilePanelDemo.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TilePanel\TilePanel.csproj">
+      <Project>{4ddc9517-3025-41e5-9505-937ce5d48224}</Project>
+      <Name>TilePanel</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
