--- a/src/TilePanel/TilePanel/TilePanel.csproj
+++ b/src/TilePanel/TilePanel/TilePanel.csproj
@@ -5,4 +5,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
